adding optional task filter
